[gd_scene load_steps=15 format=3 uid="uid://dicbo7k2xiobq"]

[ext_resource type="Script" path="res://Scenes and Scripts/Tiles/tile_1.gd" id="1_f3lrx"]
[ext_resource type="Texture2D" uid="uid://ddcv6cj8q4jij" path="res://Assets/tiles/Labyrinth_3.png" id="2_50kmr"]
[ext_resource type="Texture2D" uid="uid://d3o8q7155roa6" path="res://Assets/tiles/Lab3_GrasflaÌˆche.png" id="3_7mlui"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gn7kc"]
polygon = PackedVector2Array(-1, -1, 892, -1, 886, 227, 782, 227, 779, 163, 47, 162, 43, 472, -1, 474)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_jxxao"]
polygon = PackedVector2Array(8, 17, 167, 23, 156, 312, 224, 318, 222, 408, 102, 397, 113, 545, 168, 549, 170, 595, 10, 598)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_k7yo6"]
polygon = PackedVector2Array(12, 7, 110, 8, 107, 534, -173, 536, -174, 429, 12, 434)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_6wijy"]
polygon = PackedVector2Array(111, 427, 110, 534, 7, 529, 7, 428)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_eafh1"]
polygon = PackedVector2Array(900, 420, 900, 891, 735, 890, 739, 586, 620, 587, 618, 467, 470, 464, 470, 586, 257, 580, 253, 468, 14, 464, 10, 421)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_lqpji"]
polygon = PackedVector2Array(351, 431, 353, 589, 12, 596, 9, 425)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qsqwx"]
polygon = PackedVector2Array(230, 437, 226, 680, 292, 678, 290, 800, 621, 798, 618, 435, 660, 427, 660, 900, -234, 900, -230, 850, 82, 858, 79, 531, 11, 529, 10, 430)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rqwh1"]
polygon = PackedVector2Array(119, 429, 116, 652, 74, 653, 76, 526, 18, 528, 20, 434)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_cgbrw"]
polygon = PackedVector2Array(416, 427, 414, 477, 0, 480, 0, 425)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qjx87"]
polygon = PackedVector2Array(163, 427, 159, 892, 67, 888, 64, 591, 9, 590, 7, 427)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_b1ugb"]
polygon = PackedVector2Array(103, 428, 104, 734, 347, 735, 349, 853, 892, 854, 893, 900, 0, 900, 0, 425)

[node name="Tile3" type="Node2D"]
position = Vector2(1, 1)
script = ExtResource("1_f3lrx")
light_spawn_chance = 7

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
rotation = 3.14159
texture = ExtResource("2_50kmr")

[node name="LevelBorder" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(-1, -1, 899, -1, 899, 239, 779, 239, 779, 179, 59, 179, 59, 479, -1, 479)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(179, 299, 359, 299, 359, 779, 239, 779, 239, 479, 179, 479)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(-1, 599, 119, 599, 119, 899, 359, 899, 359, 1019, 899, 1019, 899, 1079, -1, 1079)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(479, 899, 659, 899, 659, 839, 599, 839, 599, 719, 719, 719, 719, 599, 659, 599, 659, 299, 479, 299)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(779, 359, 779, 479, 899, 479, 899, 359)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(1019, 179, 1019, 599, 839, 599, 839, 719, 1139, 719, 1139, 179)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(1019, -1, 1019, 59, 1259, 59, 1259, 179, 1499, 179, 1499, 59, 1619, 59, 1619, 179, 1739, 179, 1739, 480, 1919, 480, 1919, -1)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(1619, 479, 1619, 299, 1259, 299, 1259, 479)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(1259, 599, 1259, 719, 1319, 719, 1319, 1019, 1019, 1019, 1019, 1079, 1919, 1079, 1919, 599, 1859, 599, 1859, 959, 1559, 959, 1559, 839, 1499, 839, 1499, 599)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(779, 839, 779, 899, 1199, 899, 1199, 839)

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="LevelBorder"]
polygon = PackedVector2Array(1619, 599, 1619, 719, 1679, 719, 1679, 839, 1739, 839, 1739, 599)

[node name="EnemySpawns" type="Node2D" parent="."]

[node name="EnemySpawn1" type="Marker2D" parent="EnemySpawns"]
position = Vector2(299, 719)

[node name="EnemySpawn2" type="Marker2D" parent="EnemySpawns"]
position = Vector2(839, 419)

[node name="EnemySpawn3" type="Marker2D" parent="EnemySpawns"]
position = Vector2(1319, 119)

[node name="EnemySpawn4" type="Marker2D" parent="EnemySpawns"]
position = Vector2(1702, 107)

[node name="EnemySpawn5" type="Marker2D" parent="EnemySpawns"]
position = Vector2(1319, 659)

[node name="LightSpawns" type="Node2D" parent="."]

[node name="LightSpawn1" type="Marker2D" parent="LightSpawns"]
position = Vector2(59, 539)

[node name="LightSpawn4" type="Marker2D" parent="LightSpawns"]
position = Vector2(179, 539)

[node name="LightSpawn5" type="Marker2D" parent="LightSpawns"]
position = Vector2(179, 659)

[node name="LightSpawn6" type="Marker2D" parent="LightSpawns"]
position = Vector2(179, 839)

[node name="LightSpawn7" type="Marker2D" parent="LightSpawns"]
position = Vector2(299, 839)

[node name="LightSpawn8" type="Marker2D" parent="LightSpawns"]
position = Vector2(419, 839)

[node name="LightSpawn9" type="Marker2D" parent="LightSpawns"]
position = Vector2(419, 959)

[node name="LightSpawn10" type="Marker2D" parent="LightSpawns"]
position = Vector2(539, 959)

[node name="LightSpawn11" type="Marker2D" parent="LightSpawns"]
position = Vector2(659, 959)

[node name="LightSpawn12" type="Marker2D" parent="LightSpawns"]
position = Vector2(419, 719)

[node name="LightSpawn13" type="Marker2D" parent="LightSpawns"]
position = Vector2(419, 599)

[node name="LightSpawn14" type="Marker2D" parent="LightSpawns"]
position = Vector2(419, 479)

[node name="LightSpawn15" type="Marker2D" parent="LightSpawns"]
position = Vector2(419, 359)

[node name="LightSpawn16" type="Marker2D" parent="LightSpawns"]
position = Vector2(419, 239)

[node name="LightSpawn17" type="Marker2D" parent="LightSpawns"]
position = Vector2(299, 239)

[node name="LightSpawn18" type="Marker2D" parent="LightSpawns"]
position = Vector2(599, 239)

[node name="LightSpawn19" type="Marker2D" parent="LightSpawns"]
position = Vector2(719, 239)

[node name="LightSpawn20" type="Marker2D" parent="LightSpawns"]
position = Vector2(719, 359)

[node name="LightSpawn21" type="Marker2D" parent="LightSpawns"]
position = Vector2(719, 539)

[node name="LightSpawn22" type="Marker2D" parent="LightSpawns"]
position = Vector2(839, 539)

[node name="LightSpawn23" type="Marker2D" parent="LightSpawns"]
position = Vector2(959, 539)

[node name="LightSpawn24" type="Marker2D" parent="LightSpawns"]
position = Vector2(959, 419)

[node name="LightSpawn25" type="Marker2D" parent="LightSpawns"]
position = Vector2(959, 299)

[node name="LightSpawn26" type="Marker2D" parent="LightSpawns"]
position = Vector2(839, 299)

[node name="LightSpawn27" type="Marker2D" parent="LightSpawns"]
position = Vector2(959, 179)

[node name="LightSpawn28" type="Marker2D" parent="LightSpawns"]
position = Vector2(959, 59)

[node name="LightSpawn29" type="Marker2D" parent="LightSpawns"]
position = Vector2(1079, 119)

[node name="LightSpawn30" type="Marker2D" parent="LightSpawns"]
position = Vector2(1199, 119)

[node name="LightSpawn31" type="Marker2D" parent="LightSpawns"]
position = Vector2(1199, 239)

[node name="LightSpawn32" type="Marker2D" parent="LightSpawns"]
position = Vector2(1319, 239)

[node name="LightSpawn33" type="Marker2D" parent="LightSpawns"]
position = Vector2(1439, 239)

[node name="LightSpawn34" type="Marker2D" parent="LightSpawns"]
position = Vector2(1559, 239)

[node name="LightSpawn35" type="Marker2D" parent="LightSpawns"]
position = Vector2(1559, 119)

[node name="LightSpawn36" type="Marker2D" parent="LightSpawns"]
position = Vector2(1679, 239)

[node name="LightSpawn37" type="Marker2D" parent="LightSpawns"]
position = Vector2(1679, 359)

[node name="LightSpawn38" type="Marker2D" parent="LightSpawns"]
position = Vector2(1679, 539)

[node name="LightSpawn39" type="Marker2D" parent="LightSpawns"]
position = Vector2(1859, 539)

[node name="LightSpawn40" type="Marker2D" parent="LightSpawns"]
position = Vector2(1799, 659)

[node name="LightSpawn41" type="Marker2D" parent="LightSpawns"]
position = Vector2(1799, 779)

[node name="LightSpawn42" type="Marker2D" parent="LightSpawns"]
position = Vector2(1799, 899)

[node name="LightSpawn43" type="Marker2D" parent="LightSpawns"]
position = Vector2(1679, 899)

[node name="LightSpawn44" type="Marker2D" parent="LightSpawns"]
position = Vector2(1619, 779)

[node name="LightSpawn45" type="Marker2D" parent="LightSpawns"]
position = Vector2(1559, 659)

[node name="LightSpawn46" type="Marker2D" parent="LightSpawns"]
position = Vector2(1559, 539)

[node name="LightSpawn47" type="Marker2D" parent="LightSpawns"]
position = Vector2(1439, 539)

[node name="LightSpawn48" type="Marker2D" parent="LightSpawns"]
position = Vector2(1319, 539)

[node name="LightSpawn49" type="Marker2D" parent="LightSpawns"]
position = Vector2(1199, 539)

[node name="LightSpawn50" type="Marker2D" parent="LightSpawns"]
position = Vector2(1199, 419)

[node name="LightSpawn51" type="Marker2D" parent="LightSpawns"]
position = Vector2(1199, 659)

[node name="LightSpawn52" type="Marker2D" parent="LightSpawns"]
position = Vector2(1259, 779)

[node name="LightSpawn53" type="Marker2D" parent="LightSpawns"]
position = Vector2(1259, 959)

[node name="LightSpawn54" type="Marker2D" parent="LightSpawns"]
position = Vector2(1139, 959)

[node name="LightSpawn55" type="Marker2D" parent="LightSpawns"]
position = Vector2(959, 959)

[node name="LightSpawn56" type="Marker2D" parent="LightSpawns"]
position = Vector2(779, 959)

[node name="LightSpawn57" type="Marker2D" parent="LightSpawns"]
position = Vector2(659, 779)

[node name="LightSpawn58" type="Marker2D" parent="LightSpawns"]
position = Vector2(839, 779)

[node name="LightSpawn59" type="Marker2D" parent="LightSpawns"]
position = Vector2(779, 659)

[node name="LightSpawn60" type="Marker2D" parent="LightSpawns"]
position = Vector2(959, 779)

[node name="LightSpawn61" type="Marker2D" parent="LightSpawns"]
position = Vector2(1079, 779)

[node name="LightSpawn2" type="Marker2D" parent="LightSpawns"]
position = Vector2(119, 359)

[node name="LightSpawn3" type="Marker2D" parent="LightSpawns"]
position = Vector2(119, 239)

[node name="Shadows" type="Node2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Shadows"]
occluder = SubResource("OccluderPolygon2D_gn7kc")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Shadows"]
position = Vector2(479, 299)
occluder = SubResource("OccluderPolygon2D_jxxao")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="Shadows"]
position = Vector2(1019, 179)
occluder = SubResource("OccluderPolygon2D_k7yo6")

[node name="LightOccluder2D4" type="LightOccluder2D" parent="Shadows"]
position = Vector2(779, -61)
occluder = SubResource("OccluderPolygon2D_6wijy")

[node name="LightOccluder2D5" type="LightOccluder2D" parent="Shadows"]
position = Vector2(1019, -421)
occluder = SubResource("OccluderPolygon2D_eafh1")

[node name="LightOccluder2D6" type="LightOccluder2D" parent="Shadows"]
position = Vector2(1259, -121)
occluder = SubResource("OccluderPolygon2D_lqpji")

[node name="LightOccluder2D7" type="LightOccluder2D" parent="Shadows"]
position = Vector2(1259, 179)
occluder = SubResource("OccluderPolygon2D_qsqwx")

[node name="LightOccluder2D8" type="LightOccluder2D" parent="Shadows"]
position = Vector2(1619, 179)
occluder = SubResource("OccluderPolygon2D_rqwh1")

[node name="LightOccluder2D9" type="LightOccluder2D" parent="Shadows"]
position = Vector2(779, 419)
occluder = SubResource("OccluderPolygon2D_cgbrw")

[node name="LightOccluder2D10" type="LightOccluder2D" parent="Shadows"]
position = Vector2(179, -121)
occluder = SubResource("OccluderPolygon2D_qjx87")

[node name="LightOccluder2D11" type="LightOccluder2D" parent="Shadows"]
position = Vector2(-1, 179)
occluder = SubResource("OccluderPolygon2D_b1ugb")

[node name="Lab3GrasflaÌˆche" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(960, 540)
rotation = 3.14159
texture = ExtResource("3_7mlui")
